tests/typechecker/fail/013-let.hyg
let x: int = 3;
let y: int = {
    let z: int = 4;
    z + y
};
println(x + x)
